# BillingSystemBackend

./: .gitignore  Cargo.toml  README.md
src/api/: mod.rs  product.rs  sales.rs  user.rs
src/model/: product.rs  sales.rs  user.rs
src/service/: product.rs  sales.rs  user.rs
src/utils/: random.rs
