[package]
name = "billing_system_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
aws-config = "^0.8"
aws-sdk-dynamodb = "^0.8"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
mongodb = "2.6.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
serde_json = "1.0"
utoipa = "4.0.0"
rand = "0.8"
